gif hover to play

--- a/design_system/index.html
+++ b/design_system/index.html
@@ -8,8 +8,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Vicky W. | UX Designer | Design System </title>
 
-  <title>Vicky W.| Product Designer| UI/UX Designer| Design System </title>
   <meta name="keywords"
     content="Vicky Wang, Product Design, Product Designer, UI/UX Designer, Designer, Architecture, Architect, San Francisco, UC Berkeley">
   <meta name="author" content="Vicky Wang">
