--- a/glorify/index.html
+++ b/glorify/index.html
@@ -373,20 +373,46 @@
     <div class="blankHXS"></div>
     <div class="Grid Grid--gutters Grid--cols-3 u-textCenter wrapper">
       <div class="Grid-cell ">
-        <div class="gif-wrapper element">
-          <img class="gif-toggle widthS" data-gif="HiFi_GroupPrayer_QuickStartPtt.gif" data-static="HiFi_GroupPrayerCover.png"
-            src="HiFi_GroupPrayerCover.png"/>
+        <div class="element displayLaptop">
+          <img class="gif-toggle widthS " data-gif="HiFi_GroupPrayer_QuickStartPtt.gif"
+            data-static="HiFi_GroupPrayerCover.png" src="HiFi_GroupPrayerCover.png" />
         </div>
+        <!-- displayLaptop -->
+
+        <div class="element displayTablet">
+          <img class="gif-toggle widthS" data-gif="HiFi_GroupPrayer_QuickStartPtt.gif"
+            data-static="HiFi_GroupPrayerCoverTap.png" src="HiFi_GroupPrayerCoverTap.png" />
+        </div>
+        <!-- displayTablet -->
+
+        <div class="element displayPhone">
+          <img class="gif-toggle widthS" data-gif="HiFi_GroupPrayer_QuickStartPtt.gif"
+            data-static="HiFi_GroupPrayerCoverTap.png" src="HiFi_GroupPrayerCoverTap.png" />
+        </div>
+        <!-- displayPhone -->
+
         <div class="element">
           <h4> Quick start group prayer</h4>
         </div>
       </div>
+
+
       <div class="Grid-cell">
-        <div class="gif-wrapper element">
-          <img class="gif-toggle widthS" data-gif="HiFi_GroupPrayer_CustomPtt.gif" data-static="HiFi_GroupPrayerCover.png"
-          src="HiFi_GroupPrayerCover.png"/>
+        <div class="element displayLaptop">
+          <img class="gif-toggle widthS" data-gif="HiFi_GroupPrayer_CustomPtt.gif"
+            data-static="HiFi_GroupPrayerCover.png" src="HiFi_GroupPrayerCover.png" />
         </div>
-   
+        <!-- displayLaptop -->
+        <div class="element displayTablet">
+          <img class="gif-toggle widthS" data-gif="HiFi_GroupPrayer_CustomPtt.gif"
+            data-static="HiFi_GroupPrayerCoverTap.png" src="HiFi_GroupPrayerCoverTap.png" />
+        </div>
+        <!-- displayTablet -->
+        <div class="element displayPhone">
+          <img class="gif-toggle widthS" data-gif="HiFi_GroupPrayer_CustomPtt.gif"
+            data-static="HiFi_GroupPrayerCoverTap.png" src="HiFi_GroupPrayerCoverTap.png" />
+        </div>
+        <!-- displayPhone -->
 
         <div class="element">
           <h4> Customized group prayer</h4>
@@ -394,8 +420,27 @@
       </div>
       <div class="Grid-cell ">
         <div class="gif-wrapper element">
-          <img class="gif-toggle widthS" data-gif="HiFi_GroupPrayer_JoinPtt.gif" data-static="HiFi_GroupPrayerCover.png"
-          src="HiFi_GroupPrayerCover.png"/>
+
+
+
+          <div class="element displayLaptop">
+            <img class="gif-toggle widthS" data-gif="HiFi_GroupPrayer_JoinPtt.gif"
+              data-static="HiFi_GroupPrayerCover.png" src="HiFi_GroupPrayerCover.png" />
+          </div>
+          <!-- displayLaptop -->
+          <div class="element displayTablet">
+            <img class="gif-toggle widthS" data-gif="HiFi_GroupPrayer_JoinPtt.gif"
+              data-static="HiFi_GroupPrayerCoverTap.png" src="HiFi_GroupPrayerCoverTap.png" />
+          </div>
+          <!-- displayTablet -->
+          <div class="element displayPhone">
+            <img class="gif-toggle widthS" data-gif="HiFi_GroupPrayer_JoinPtt.gif"
+              data-static="HiFi_GroupPrayerCoverTap.png" src="HiFi_GroupPrayerCoverTap.png" />
+          </div>
+          <!-- displayPhone -->
+
+
+
         </div>
 
         <div class="element">
@@ -403,7 +448,6 @@
         </div>
       </div>
     </div>
-
     <div class="Grid Grid--full wrapper">
       <div class="Grid-cell">
         <div class="element">
@@ -426,25 +470,52 @@
     </div>
     <!-- Prototype Title -->
     <div class="Grid Grid--gutters Grid--cols-2 u-textCenter wrapper">
+
+
+
+
       <div class="Grid-cell">
-        <div class="element"> <img class="gif-toggle widthS" data-gif="HiFi_FinalPrayer.gif"
+        <div class="element displayLaptop">
+          <img class="gif-toggle widthS" data-gif="HiFi_FinalPrayer.gif"
             data-static="HiFi_FinalPrayer.png" src="HiFi_FinalPrayer.png" />
         </div>
+        <!-- displayLaptop -->
+        <div class="element displayTablet">
+          <img class="gif-toggle widthS" data-gif="HiFi_FinalPrayer.gif"
+            data-static="HiFi_FinalPrayerTap.png" src="HiFi_FinalPrayerTap.png" />
+        </div>
+        <!-- displayTablet -->
+        <div class="element displayPhone">
+          <img class="gif-toggle widthS" data-gif="HiFi_FinalPrayer.gif"
+            data-static="HiFi_FinalPrayerTap.png" src="HiFi_FinalPrayerTap.png" />
+        </div>
+        <!-- displayPhone -->
         <div class="element">
           <h4> Hi-fi prototype </h4>
         </div>
       </div>
 
       <div class="Grid-cell">
-
-        <div class="gif-wrapper element">
-          <img class="gif-toggle widthS" data-gif="HiFi_FinalEnhancement.gif" data-static="HiFi_FinalEnhancement.png"
-            src="HiFi_FinalEnhancement.png" />
+        <div class="element displayLaptop">
+          <img class="gif-toggle widthS" data-gif="HiFi_FinalEnhancement.gif"
+            data-static="HiFi_FinalEnhancement.png" src="HiFi_FinalEnhancement.png" />
         </div>
+        <!-- displayLaptop -->
+        <div class="element displayTablet">
+          <img class="gif-toggle widthS" data-gif="HiFi_FinalEnhancement.gif"
+            data-static="HiFi_FinalEnhancementTap.png" src="HiFi_FinalEnhancementTap.png" />
+        </div>
+        <!-- displayTablet -->
+        <div class="element displayPhone">
+          <img class="gif-toggle widthS" data-gif="HiFi_FinalPrayer.gif"
+            data-static="HiFi_FinalEnhancementTap.png" src="HiFi_FinalEnhancementTap.png" />
+        </div>
+        <!-- displayPhone -->
         <div class="element">
           <h4> Enhancement </h4>
         </div>
       </div>
+ 
     </div>
     <div class="Grid Grid--full wrapper">
       <div class="Grid-cell">
