--- a/glorify/index.html
+++ b/glorify/index.html
@@ -470,10 +470,6 @@
     </div>
     <!-- Prototype Title -->
     <div class="Grid Grid--gutters Grid--cols-2 u-textCenter wrapper">
-
-
-
-
       <div class="Grid-cell">
         <div class="element displayLaptop">
           <img class="gif-toggle widthS" data-gif="HiFi_FinalPrayer.gif"
@@ -515,7 +511,6 @@
           <h4> Enhancement </h4>
         </div>
       </div>
- 
     </div>
     <div class="Grid Grid--full wrapper">
       <div class="Grid-cell">
@@ -3150,7 +3145,7 @@
           <div class="TBcarousel Grid--center Grid Grid--full" aria-label="TBcarousel" Tabindex="0"
             id="TBcarouselGlorify8">
             <div class="TBslides">
-              <div class="TBslidesItem slide-1" id="slide-1" aria-label="slide 1 of 3" tabindex="0">
+              <div class="TBslidesItem slide-1" id="slide-1" aria-label="slide 1 of 2" tabindex="0">
                 <div class="Grid Grid--gutters Grid--cols-2 u-textCenter">
                   <div class="Grid-cell">
                     <div class="element"> <img class="widthS" src="Iterate_Flow_GroupPrayer_Create_PreviousVersion.gif"
@@ -3170,8 +3165,8 @@
                   </div>
                 </div>
               </div>
-              <div class="TBslidesItem slide-2" id="slide-2" aria-label="slide 2 of 3" tabindex="0">
-                <div class="Grid Grid--gutters Grid--cols-2 u-textCenter wrapper">
+              <div class="TBslidesItem slide-2" id="slide-2" aria-label="slide 2 of 2" tabindex="0">
+                <div class="Grid Grid--gutters Grid--cols-2 u-textCenter">
                   <div class="Grid-cell">
                     <div class="element"> <img class=" widthS" src="Iterate_Flow_GroupPrayer_Join_PreviousVersion.gif"
                         alt="New User">
@@ -3974,15 +3969,42 @@
         <!-- Img -->
         <div class="Grid Grid--gutters Grid--cols-2 u-textCenter wrapper">
           <div class="Grid-cell">
-            <div class="element"> <img class=" widthS" src="HiFi_FinalPrayer.gif" alt="New User">
+            <div class="element displayLaptop">
+              <img class="gif-toggle widthS" data-gif="HiFi_FinalPrayer.gif"
+                data-static="HiFi_FinalPrayer.png" src="HiFi_FinalPrayer.png" />
             </div>
+            <!-- displayLaptop -->
+            <div class="element displayTablet">
+              <img class="gif-toggle widthS" data-gif="HiFi_FinalPrayer.gif"
+                data-static="HiFi_FinalPrayerTap.png" src="HiFi_FinalPrayerTap.png" />
+            </div>
+            <!-- displayTablet -->
+            <div class="element displayPhone">
+              <img class="gif-toggle widthS" data-gif="HiFi_FinalPrayer.gif"
+                data-static="HiFi_FinalPrayerTap.png" src="HiFi_FinalPrayerTap.png" />
+            </div>
+            <!-- displayPhone -->
             <div class="element">
               <h4> Hi-fi prototype </h4>
             </div>
           </div>
+    
           <div class="Grid-cell">
-            <div class="element"> <img class=" widthS" src="HiFi_FinalEnhancement.gif" alt="New User">
+            <div class="element displayLaptop">
+              <img class="gif-toggle widthS" data-gif="HiFi_FinalEnhancement.gif"
+                data-static="HiFi_FinalEnhancement.png" src="HiFi_FinalEnhancement.png" />
             </div>
+            <!-- displayLaptop -->
+            <div class="element displayTablet">
+              <img class="gif-toggle widthS" data-gif="HiFi_FinalEnhancement.gif"
+                data-static="HiFi_FinalEnhancementTap.png" src="HiFi_FinalEnhancementTap.png" />
+            </div>
+            <!-- displayTablet -->
+            <div class="element displayPhone">
+              <img class="gif-toggle widthS" data-gif="HiFi_FinalPrayer.gif"
+                data-static="HiFi_FinalEnhancementTap.png" src="HiFi_FinalEnhancementTap.png" />
+            </div>
+            <!-- displayPhone -->
             <div class="element">
               <h4> Enhancement </h4>
             </div>
