--- a/glorify/index.html
+++ b/glorify/index.html
@@ -418,35 +418,31 @@
           <h4> Customized group prayer</h4>
         </div>
       </div>
-      <div class="Grid-cell ">
-        <div class="gif-wrapper element">
 
 
-
-          <div class="element displayLaptop">
-            <img class="gif-toggle widthS" data-gif="HiFi_GroupPrayer_JoinPtt.gif"
-              data-static="HiFi_GroupPrayerCover.png" src="HiFi_GroupPrayerCover.png" />
-          </div>
-          <!-- displayLaptop -->
-          <div class="element displayTablet">
-            <img class="gif-toggle widthS" data-gif="HiFi_GroupPrayer_JoinPtt.gif"
-              data-static="HiFi_GroupPrayerCoverTap.png" src="HiFi_GroupPrayerCoverTap.png" />
-          </div>
-          <!-- displayTablet -->
-          <div class="element displayPhone">
-            <img class="gif-toggle widthS" data-gif="HiFi_GroupPrayer_JoinPtt.gif"
-              data-static="HiFi_GroupPrayerCoverTap.png" src="HiFi_GroupPrayerCoverTap.png" />
-          </div>
-          <!-- displayPhone -->
-
-
-
+      <div class="Grid-cell">
+        <div class="element displayLaptop">
+          <img class="gif-toggle widthS" data-gif="HiFi_GroupPrayer_JoinPtt.gif"
+            data-static="HiFi_GroupPrayerCover.png" src="HiFi_GroupPrayerCover.png" />
         </div>
+        <!-- displayLaptop -->
+        <div class="element displayTablet">
+          <img class="gif-toggle widthS" data-gif="HiFi_GroupPrayer_JoinPtt.gif"
+            data-static="HiFi_GroupPrayerCoverTap.png" src="HiFi_GroupPrayerCoverTap.png" />
+        </div>
+        <!-- displayTablet -->
+        <div class="element displayPhone">
+          <img class="gif-toggle widthS" data-gif="HiFi_GroupPrayer_JoinPtt.gif"
+            data-static="HiFi_GroupPrayerCoverTap.png" src="HiFi_GroupPrayerCoverTap.png" />
+        </div>
+        <!-- displayPhone -->
 
         <div class="element">
           <h4> Join group prayer</h4>
         </div>
       </div>
+
+
     </div>
     <div class="Grid Grid--full wrapper">
       <div class="Grid-cell">
@@ -742,7 +738,8 @@
                   </p>
                 </div>
                 <div class="Grid-cell">
-                  <h4> <strong> 3 participants</strong> </h4>
+                  <h4 class="help" title="This is a brief exercise, ideally requiring the recruitment of 5 participants."> <strong> 3 participants </strong>
+                </h4>
                   <ul>
                     <li class="listCircle">Participant 1 age. 38 male </li>
                     <li class="listCircle">Participant 2 age. 46 female </li>
@@ -755,8 +752,7 @@
               <div class="Grid Grid--full wrapper">
                 <div class="Grid-cell">
 
-                  <p class="specialTextNote colorGLORIFYBlue u-textCenter">This is a brief exercise, ideally requiring
-                    the recruitment of 5 participants.
+                  <p class="specialTextNote colorGLORIFYBlue u-textCenter">Research goal &#8680; research questions &#8680; recruit participants
                   </p>
 
                 </div>
@@ -1481,7 +1477,6 @@
             </div>
 
 
-
             <h3 class="accordion accordionBorderBottom noMargin"><strong> How-Now-Wow Matrix
               </strong></h3>
 
@@ -1498,15 +1493,62 @@
                   </div>
                 </div>
               </div>
-
-
               <div class="blankHXS"></div>
             </div>
           </div>
 
 
           <div class="blankHS"></div>
+          <div class="element">
+            <div class="Grid Grid--full">
+              <div class="Grid-cell">
+                <div class="element">
+                  <h4> <strong> Group Worship Through the App&#58; </strong> </h4>
+                  <p>Group worship within the app,  <span class="textDecor GLORIFY">group prayer and Bible study</span>, emerges as a top design choice, highlighting user engagement and community growth.</p>
+                </div>
+              </div>
+            </div>
+            <div class="Grid Grid--gutters Grid--cols-2">
+              <div class="Grid-cell">
+                <div class="element">
+                  <h5> <strong> Deepened Community Interaction&#58; </strong></h5>
+                  <p>While the 'Most Rational' category establishes connections and the 'Most Delightful' enhances discovery, the 'Darling' idea of group worship delves deeper into facilitating spiritual communion among users. It's an experience that can bind the community closer than shared notes or music.</p>
+                </div>
+              </div>
+              <div class="Grid-cell">
+                <div class="element">
+                  <h5> <strong> Unique Offering:&#58; </strong></h5>
+                  <P> While many apps might facilitate sharing of notes, music, or journals, a space designed specifically for group prayer/Bible study is a rarer commodity, giving our platform a distinct edge.
+                  </P>
+                </div>
+              </div>
+            </div>
+            <div class="Grid Grid--gutters Grid--cols-2">
+              <div class="Grid-cell">
+                <div class="element">
+                  <h5> <strong> Balanced Approach&#58; </strong></h5>
+                  <p>Being from the 'Darling' category, it strikes a balance between innovation and feasibility. It's a feature that's both daring and realistic, allowing us to explore new territories without straying too far from known grounds.</p>
+                </div>
+              </div>
+              <div class="Grid-cell">
+                <div class="element">
+                  <h5> <strong> Future Scalability:&#58; </strong></h5>
+                  <P> Once a robust system for group worship/Bible study is established, it can be further expanded or refined, integrating elements from other categories. For instance, shared worship statistics from the 'Most Rational' category can be integrated to provide insights into group prayer sessions.
+                  </P>
+                </div>
+              </div>
+            </div>
 
+          </div>
+
+          <div class="Grid Grid--full wrapper">
+            <div class="Grid-cell">
+              <div class="element">
+                <p class="specialTextNote colorGLORIFYBlue u-textCenter">While my decision stems from a small sample size, with more time, I'd gather broader feedback and use quantitative surveys for deeper insights. Yet, even with this limited data, the 'group worship through the app' emerges as a leading design choice.
+                </p>
+              </div>
+            </div>
+          </div>
 
 
           <div class="blankHS"></div>
