--- a/glorify/index.html
+++ b/glorify/index.html
@@ -372,19 +372,19 @@
     <div class="blankHXS"></div>
     <div class="Grid Grid--gutters Grid--cols-3 u-textCenter wrapper">
       <div class="Grid-cell">
-        <div class="element displayLaptop">
-          <img class="gif-toggle widthS" data-gif="HiFi_GroupPrayer_QuickStartPtt.gif"
+        <div class="element displayLaptop progress">
+          <img class="gif-toggle widthS " data-gif="HiFi_GroupPrayer_QuickStartPtt.gif"
             data-static="HiFi_GroupPrayerCover.png" src="HiFi_GroupPrayerCover.png" />
         </div>
         <!-- displayLaptop -->
 
-        <div class="element displayTablet">
+        <div class="element displayTablet progress">
           <img class="gif-toggle widthS" data-gif="HiFi_GroupPrayer_QuickStartPtt.gif"
             data-static="HiFi_GroupPrayerCoverTap.png" src="HiFi_GroupPrayerCoverTap.png" />
         </div>
         <!-- displayTablet -->
 
-        <div class="element displayPhone">
+        <div class="element displayPhone progress">
           <img class="gif-toggle widthS" data-gif="HiFi_GroupPrayer_QuickStartPtt.gif"
             data-static="HiFi_GroupPrayerCoverTap.png" src="HiFi_GroupPrayerCoverTap.png" />
         </div>
@@ -397,17 +397,17 @@
 
 
       <div class="Grid-cell">
-        <div class="element displayLaptop">
+        <div class="element displayLaptop progress">
           <img class="gif-toggle widthS" data-gif="HiFi_GroupPrayer_CustomPtt.gif"
             data-static="HiFi_GroupPrayerCover.png" src="HiFi_GroupPrayerCover.png" />
         </div>
         <!-- displayLaptop -->
-        <div class="element displayTablet">
+        <div class="element displayTablet progress">
           <img class="gif-toggle widthS" data-gif="HiFi_GroupPrayer_CustomPtt.gif"
             data-static="HiFi_GroupPrayerCoverTap.png" src="HiFi_GroupPrayerCoverTap.png" />
         </div>
         <!-- displayTablet -->
-        <div class="element displayPhone">
+        <div class="element displayPhone progress">
           <img class="gif-toggle widthS" data-gif="HiFi_GroupPrayer_CustomPtt.gif"
             data-static="HiFi_GroupPrayerCoverTap.png" src="HiFi_GroupPrayerCoverTap.png" />
         </div>
@@ -420,17 +420,17 @@
 
 
       <div class="Grid-cell">
-        <div class="element displayLaptop">
+        <div class="element displayLaptop progress">
           <img class="gif-toggle widthS" data-gif="HiFi_GroupPrayer_JoinPtt.gif"
             data-static="HiFi_GroupPrayerCover.png" src="HiFi_GroupPrayerCover.png" />
         </div>
         <!-- displayLaptop -->
-        <div class="element displayTablet">
+        <div class="element displayTablet progress">
           <img class="gif-toggle widthS" data-gif="HiFi_GroupPrayer_JoinPtt.gif"
             data-static="HiFi_GroupPrayerCoverTap.png" src="HiFi_GroupPrayerCoverTap.png" />
         </div>
         <!-- displayTablet -->
-        <div class="element displayPhone">
+        <div class="element displayPhone progress">
           <img class="gif-toggle widthS" data-gif="HiFi_GroupPrayer_JoinPtt.gif"
             data-static="HiFi_GroupPrayerCoverTap.png" src="HiFi_GroupPrayerCoverTap.png" />
         </div>
@@ -466,17 +466,17 @@
     <!-- Prototype Title -->
     <div class="Grid Grid--gutters Grid--cols-2 u-textCenter wrapper">
       <div class="Grid-cell">
-        <div class="element displayLaptop">
+        <div class="element displayLaptop progress">
           <img class="gif-toggle widthS" data-gif="HiFi_FinalPrayer.gif"
             data-static="HiFi_FinalPrayer.png" src="HiFi_FinalPrayer.png" />
         </div>
         <!-- displayLaptop -->
-        <div class="element displayTablet">
+        <div class="element displayTablet progress">
           <img class="gif-toggle widthS" data-gif="HiFi_FinalPrayer.gif"
             data-static="HiFi_FinalPrayerTap.png" src="HiFi_FinalPrayerTap.png" />
         </div>
         <!-- displayTablet -->
-        <div class="element displayPhone">
+        <div class="element displayPhone progress">
           <img class="gif-toggle widthS" data-gif="HiFi_FinalPrayer.gif"
             data-static="HiFi_FinalPrayerTap.png" src="HiFi_FinalPrayerTap.png" />
         </div>
@@ -487,17 +487,17 @@
       </div>
 
       <div class="Grid-cell">
-        <div class="element displayLaptop">
+        <div class="element displayLaptop progress">
           <img class="gif-toggle widthS" data-gif="HiFi_FinalEnhancement.gif"
             data-static="HiFi_FinalEnhancement.png" src="HiFi_FinalEnhancement.png" />
         </div>
         <!-- displayLaptop -->
-        <div class="element displayTablet">
+        <div class="element displayTablet progress">
           <img class="gif-toggle widthS" data-gif="HiFi_FinalEnhancement.gif"
             data-static="HiFi_FinalEnhancementTap.png" src="HiFi_FinalEnhancementTap.png" />
         </div>
         <!-- displayTablet -->
-        <div class="element displayPhone">
+        <div class="element displayPhone progress">
           <img class="gif-toggle widthS" data-gif="HiFi_FinalPrayer.gif"
             data-static="HiFi_FinalEnhancementTap.png" src="HiFi_FinalEnhancementTap.png" />
         </div>
@@ -4017,17 +4017,17 @@
         <!-- Img -->
         <div class="Grid Grid--gutters Grid--cols-2 u-textCenter wrapper">
           <div class="Grid-cell">
-            <div class="element displayLaptop">
+            <div class="element displayLaptop progress">
               <img class="gif-toggle widthS" data-gif="HiFi_FinalPrayer.gif"
                 data-static="HiFi_FinalPrayer.png" src="HiFi_FinalPrayer.png" />
             </div>
             <!-- displayLaptop -->
-            <div class="element displayTablet">
+            <div class="element displayTablet progress">
               <img class="gif-toggle widthS" data-gif="HiFi_FinalPrayer.gif"
                 data-static="HiFi_FinalPrayerTap.png" src="HiFi_FinalPrayerTap.png" />
             </div>
             <!-- displayTablet -->
-            <div class="element displayPhone">
+            <div class="element displayPhone progress">
               <img class="gif-toggle widthS" data-gif="HiFi_FinalPrayer.gif"
                 data-static="HiFi_FinalPrayerTap.png" src="HiFi_FinalPrayerTap.png" />
             </div>
@@ -4038,17 +4038,17 @@
           </div>
     
           <div class="Grid-cell">
-            <div class="element displayLaptop">
+            <div class="element displayLaptop progress">
               <img class="gif-toggle widthS" data-gif="HiFi_FinalEnhancement.gif"
                 data-static="HiFi_FinalEnhancement.png" src="HiFi_FinalEnhancement.png" />
             </div>
             <!-- displayLaptop -->
-            <div class="element displayTablet">
+            <div class="element displayTablet progress">
               <img class="gif-toggle widthS" data-gif="HiFi_FinalEnhancement.gif"
                 data-static="HiFi_FinalEnhancementTap.png" src="HiFi_FinalEnhancementTap.png" />
             </div>
             <!-- displayTablet -->
-            <div class="element displayPhone">
+            <div class="element displayPhone progress">
               <img class="gif-toggle widthS" data-gif="HiFi_FinalPrayer.gif"
                 data-static="HiFi_FinalEnhancementTap.png" src="HiFi_FinalEnhancementTap.png" />
             </div>
