--- a/glorify/index.html
+++ b/glorify/index.html
@@ -293,7 +293,6 @@
         <h4>Photoshop</h4>
       </div>
     </div>
-
   </div>
   <div class="blankHS"></div>
   <div class="colorBgGLORIFY">
@@ -301,7 +300,7 @@
     <!-- Slideshow Title -->
     <div class="wrapper">
       <div class="Grid-cell">
-        <h2 class="element">Allow users to engage with each other within the Glorify app</h2>
+        <h2 class="element">Group prayer helps foster a connection among its participants</h2>
       </div>
     </div>
     <!-- Slideshow Title -->
@@ -351,13 +350,6 @@
           <p class="specialTextDemo colorGLORIFYGreen">Hover to pause or navigate through the slideshow
           </p>
         </div>
-        <div class="element">
-          <p class="specialTextNote colorGLORIFYBlue">After conducting research, brainstorming potential
-            solutions, and building a prototype, I have identified essential enablers. These include discovering
-            like-minded groups, engaging in discussions, gaining understanding, and fostering interactions to create
-            connections with other fellowships.
-          </p>
-        </div>
       </div>
     </div>
     <div class="blankHS"></div>
@@ -365,7 +357,7 @@
     <!-- Prototype Title -->
     <div class="wrapper">
       <div class="Grid-cell">
-        <h2 class="element">Group prayer experience</h2>
+        <h2 class="element">Users can either create or join a group prayer experience</h2>
       </div>
     </div>
     <!-- Prototype Title -->
@@ -443,24 +435,13 @@
 
 
     </div>
-    <div class="Grid Grid--full wrapper">
-      <div class="Grid-cell">
-        <div class="element">
-          <div class="element">
-            <p class="specialTextNote colorGLORIFYBlue u-textCenter">After conducting concept test interviews, I found
-              that the group prayer experience was the most liked feature by participants due to its interactivity and
-              ease of understanding.
-            </p>
-          </div>
-        </div>
-      </div>
-    </div>
+
 
     <div class="blankHS"></div>
     <!-- Prototype Title -->
     <div class="wrapper">
       <div class="Grid-cell">
-        <h2 class="element">Group prayer experience enhancement</h2>
+        <h2 class="element">Enhancing the group prayer experience makes it more interactive</h2>
       </div>
     </div>
     <!-- Prototype Title -->
@@ -507,18 +488,7 @@
         </div>
       </div>
     </div>
-    <div class="Grid Grid--full wrapper">
-      <div class="Grid-cell">
-        <div class="element">
-          <div class="element">
-            <p class="specialTextNote colorGLORIFYBlue u-textCenter">Based on user needs from group worship, which
-              include shared faith, understanding, support, and more, the final enhancement focused on how the group
-              prayer feature can provide an experience that fulfills these needs.
-            </p>
-          </div>
-        </div>
-      </div>
-    </div>
+
 
 
     <div class="blankHS"></div>
