--- a/index.html
+++ b/index.html
@@ -232,15 +232,17 @@
 
         </div>
         <div class="Grid Grid--gutters Grid--cols-3">
-          <a href="https://www.linkedin.com/in/vicky-wyq/" target="_blank">
-            <img class="intro-logo" src="./icon/in.svg" alt="linkedin">
+          <a href="https://www.linkedin.com/in/vicky-wyq/" target="_blank" title="LinkedIn">
+            <img class="intro-logo" src="./icon/in.svg" alt="LinkedIn">
           </a>
-          <a href="https://github.com/vicky-wyq" target="_blank">
-            <img class="intro-logo" src="./icon/git.svg" alt="github">
+          <a href="https://github.com/vicky-wyq" target="_blank" title="GitHub">
+            <img class="intro-logo" src="./icon/git.svg" alt="GitHub">
           </a>
-
-          <a href="https://www.instagram.com/vw_yiqi/" target="_blank">
-            <img class="intro-logo" src="./icon/ins.svg" alt="medium">
+          <a href="https://codepen.io/vicky-wyq" target="_blank" title="CodePen">
+            <img class="intro-logo" src="./icon/Codepen.svg" alt="CodePen">
+          </a>
+          <a href="https://www.instagram.com/vw_yiqi/" target="_blank" title="Instagram">
+            <img class="intro-logo" src="./icon/ins.svg" alt="Instagram">
           </a>
         </div>
         <div class="Grid Grid--gutters Grid--cols-3">
